# rosetta

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  build.sh  compose.yml  config_example.yaml  docker-build.sh  opencode.json
.scratch/integration-tests/: DECISIONS.md  HANDOFF.md  PRD.md
.scratch/integration-tests/issues/: 01-test-infrastructure.md  02-service-connectivity.md  03-gif-providers.md  04-test-runner.md
.scratch/media-config-refactor/: DECISIONS.md  HANDOFF.md  PRD.md
.scratch/media-config-refactor/issues/: 01-update-config-structs.md  02-update-gif-provider-trait.md  03-update-gif-resolver.md  04-update-main-rs.md  05-verify-config-example-and-docs.md
.scratch/refactor-modularity/: DECISIONS.md  HANDOFF.md  PRD.md
.scratch/refactor-modularity/issues/: 01-bridge-matcher-alias-resolver.md  02-deduplicator-media-handler.md  03-message-formatter-trait.md  04-service-traits-split.md  05-service-builder-registry.md  06-bridge-matcher.md  07-message-dispatcher.md  08-edit-handler.md  09-reaction-handler.md  10-status-handler.md  11-event-router.md  12-bridge-module-structure.md  13-unit-tests-new-modules.md
src/: bridge.rs  config.rs  lib.rs  main.rs  persistence.rs
src/bridge/: alias_resolver.rs  bridge.rs  deduplicator.rs  dispatcher.rs  edit_handler.rs  formatter.rs  matcher.rs  media.rs  mod.rs  reaction_handler.rs  router.rs  status_handler.rs
src/bridge/__tests__/: dispatcher.unit.test.rs  edit_handler.unit.test.rs  status_handler.unit.test.rs
src/gif/: mod.rs  resolver.rs
src/gif/providers/: fallback.rs  giphy.rs  imgur.rs  klipy.rs  mod.rs  tenor.rs
src/services/: builder.rs  discord.rs  matrix.rs  mod.rs  registry.rs  traits.rs  whatsapp.rs
tests/: integration_tests.rs
(+6 files in other folders)
